Added a duration and a version specification on chrono due to regression.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Morindhal <Morindhal@gmail.com>"]
 
 [dependencies]
 regex = "*"
-chrono = "*"
+chrono = "0.2.25"
 libc = "*"
 json = "*"
